initial structure project using javafx and maven